--- a/src/app/pages/main/tracking/tracking.component.html
+++ b/src/app/pages/main/tracking/tracking.component.html
@@ -169,6 +169,23 @@
                 @if(showPlaybackControls) {
                     <div (mouseenter)="disableMapInteractions()" (mouseleave)="enableMapInteractions()" class="playback-control p-4 surface-card border-round shadow-8">
                         <span class="font-bold text-2xl">{{ playbackControlObject?.status }}</span>
+
+                        <div class="flex flex-column gap-3">
+                            <p class="font-bold text-xl mb-2">Vehicle History Info</p>
+                          
+                            <div class="flex justify-content-between align-items-center flex-wrap gap-4">
+                              <div class="flex flex-column">
+                                <span class="text-sm text-500">Speed</span>
+                                <span class="font-bold text-lg text-primary">{{ vehicleHistoryInfo?.speed }} km/h</span>
+                              </div>
+                          
+                              <div class="flex flex-column">
+                                <span class="text-sm text-500">Fix Time</span>
+                                <span class="font-bold text-lg text-primary">{{ vehicleHistoryInfo?.fixtime }}</span>
+                              </div>
+                            </div>
+                          </div>
+                          
                         <div class="flex flex-column">
                             <p class="font-bold text-lg">Controls</p>
                             <div class="flex justify-content-between align-items-center">
