--- a/src/app/pages/main/reports/report-detail/report-detail.component.html
+++ b/src/app/pages/main/reports/report-detail/report-detail.component.html
@@ -13,8 +13,8 @@
 
             @if(report.filters.state) {
                 <p-floatLabel>
-                    <p-dropdown  class="mr-4"
-                    styleClass="w-18rem" [options]="states" [(ngModel)]="selectedState" optionLabel="stateName" (onChange)="onStateChange($event)"
+                    <p-multiSelect  class="mr-4"
+                    styleClass="w-18rem" [options]="states" [(ngModel)]="selectedState" optionLabel="stateName" (onChange)="onStateChange($event)" [virtualScroll]="true" [itemSize]="30"
                     placeholder="Select State" [showClear]="true"  inputId="state" />
                     <label for="state">Select State</label>
                 </p-floatLabel>
@@ -23,7 +23,7 @@
             @if(report.filters.rto) {
                 <p-floatLabel>
                     <p-multiSelect  class="mr-4"
-                    styleClass="w-18rem" [options]="rtos" [(ngModel)]="selectedRto" optionLabel="rtoName"
+                    styleClass="w-18rem" [options]="rtos" [(ngModel)]="selectedRto" optionLabel="rtoName" [virtualScroll]="true" [itemSize]="30"
                     placeholder="Select Rto" [showClear]="true"  inputId="rto" />
                     <label for="rto">Select Rto</label>
                 </p-floatLabel>
@@ -43,6 +43,15 @@
                     <label for="days">Vehicles Expiring Within</label>
                 </p-floatLabel>
 
+            }
+
+            @if(report?.filters?.daysRange) {
+                <p-floatLabel>
+                    <p-dropdown  class="mr-4"
+                    styleClass="w-18rem" [options]="daysRangeOptions" [(ngModel)]="selectedDayRange" optionLabel="label"
+                    placeholder="Select Range" [showClear]="true"  inputId="daysRange" />
+                    <label for="state">Select Range</label>
+                </p-floatLabel>
             }
            
         </ng-template>
