Immediate Chnages for Tue meeting

--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -352,5 +352,5 @@
     </div>
 </div>
 
-<app-generic-dialog [enableSaveBtn]="false" [header]="currentInfoTitle" [isTable]="true" [tableData]="currentInfoData"
+<app-generic-dialog [enableSaveBtn]="false" [header]="currentInfoTitle" [isTable]="true" [tableData]="currentInfoData" [isDataLoading]="isDashboardTableLoading"
     [tableColumns]="currentInfoColumns" [modal]="true" [visible]="infoDialog" (onHide)="onHideDialog($event)" />
