--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -217,8 +217,12 @@
                     <ng-template pTemplate="emptymessage">
                         <tr>
                             <td colspan="7" class="sm:text-center text-left">
-                                  No Data Found.
-                            </td>
+                    @if(isDataLoading) {
+                        <p-progressSpinner ariaLabel="loading" styleClass="w-3rem h-3rem" />
+                    } @else {
+                        No Data Found.
+                    }
+                </td>
                         </tr>
                     </ng-template>
                 </p-table>
