--- a/src/app/pages/main/reports/report-detail/report-detail.component.html
+++ b/src/app/pages/main/reports/report-detail/report-detail.component.html
@@ -31,14 +31,14 @@
 
             @if(report?.filters?.date?.enabled) {
                 <p-floatLabel>
-                    <p-calendar class="mr-4"  [iconDisplay]="'input'"  [showIcon]="true"  styleClass="w-18rem" [(ngModel)]="selectedDate" inputId="date" />
+                    <p-calendar class="mr-4"  [iconDisplay]="'input'" [maxDate]="maxDate"  [showIcon]="true"  styleClass="w-18rem" [(ngModel)]="selectedDate" inputId="date" />
                     <label for="date">Select Date</label>
                 </p-floatLabel>
             }
 
              @if(report.filters.specificVehicle) {
                 <p-floatLabel>
-                    <input  styleClass="w-18rem" pInputText  [(ngModel)]="selectedSpecificVehicle" placeholder="Enter vehicle"  inputId="specificVehicle"/>
+                    <input  styleClass="w-18rem" class="mr-4" pInputText  [(ngModel)]="selectedSpecificVehicle" placeholder="Enter vehicle"  inputId="specificVehicle"/>
                     <label for="days">Vehicle No/Imei</label>
                 </p-floatLabel>
 
@@ -55,7 +55,7 @@
 
             @if(report?.filters?.daysRange) {
                 <p-floatLabel>
-                    <p-dropdown  class="mr-4"
+                    <p-dropdown class="mr-4"
                     styleClass="w-18rem" [options]="daysRangeOptions" [(ngModel)]="selectedDayRange" optionLabel="label"
                     placeholder="Select Range" [showClear]="true"  inputId="daysRange" />
                     <label for="state">Select Range</label>
