--- a/src/app/pages/main/tracking/tracking.component.scss
+++ b/src/app/pages/main/tracking/tracking.component.scss
@@ -37,3 +37,7 @@
 .info-window-contents::-webkit-scrollbar {
     display: none; /* Hide the scrollbar in WebKit-based browsers (Chrome, Safari) */
 }
+
+.polling-indicator {
+     z-index: 999;
+}
