--- a/src/app/pages/main/tracking/tracking.component.html
+++ b/src/app/pages/main/tracking/tracking.component.html
@@ -17,12 +17,14 @@
     <div class="flex gap-3 absolute top-0 right-0 m-3">
         <!-- Dropdown Card First -->
         <div class="polling-indicator p-3 surface-card border-round shadow-8">
-            <p-dropdown [(ngModel)]="selectedRoute" [options]="routesOptions" optionLabel="name" placeholder="Select a Route" (onChange)="handleRouteSelection($event)" [filter]="true" [showClear]="true"></p-dropdown>
+            <p-dropdown [(ngModel)]="selectedRoute" [options]="routesOptions" optionLabel="name"
+                placeholder="Select a Route" (onChange)="handleRouteSelection($event)" [filter]="true"
+                [showClear]="true"></p-dropdown>
             @if(isLoadingRoute) {
-                <p-progressSpinner styleClass="small-spinner"></p-progressSpinner>
+            <p-progressSpinner styleClass="small-spinner"></p-progressSpinner>
             }
         </div>
-
+    
         <!-- Live Tracking Card Second -->
         <div class="polling-indicator p-3 surface-card border-round shadow-8">
             <div class="flex align-items-center gap-2">
@@ -36,7 +38,7 @@
             <small class="block mt-2 text-500">Updating every 5 seconds</small>
         </div>
     </div>
-}
+    }
 
 
 
@@ -70,7 +72,7 @@
                         <div class="align-items-center">
                             <i (click)="handlePlayback()" class="pi pi-play text-blue-500 cursor-pointer text-xl mb-1 mr-2"></i>
                             <i (click)="toggleCollapse()" class="pi pi-angle-down text-blue-500 cursor-pointer text-xl"></i>
-                            <!-- <i (click)="reCenterToVehicle()" class="pi pi-pause text-blue-500 cursor-pointer text-xl mb-1 mr-2"></i> -->
+                            <!-- <i (click)="reCenterToVehicle()" class="pi pi-gps text-blue-500 cursor-pointer text-xl mb-1 mr-2"></i> -->
                             
                         </div>
                     </div>
