Expired Reportr Added

--- a/src/app/pages/main/reports/report-detail/report-detail.component.html
+++ b/src/app/pages/main/reports/report-detail/report-detail.component.html
@@ -30,7 +30,7 @@
         </ng-template>
 
         <ng-template pTemplate="right">
-                <p-button [disabled]="!selectedSubUser" icon="pi pi-search" iconPos="right" class="mr-2 inline-block" (onClick)="loadReport()"/>
+                <p-button  icon="pi pi-search" iconPos="right" class="mr-2 inline-block" (onClick)="loadReport()"/>
         </ng-template>
     </p-toolbar>
 
