--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -228,6 +228,10 @@
                 </p-table>
             </ng-container>
         }
+
+        @if(template) {
+            <ng-container *ngTemplateOutlet="template"></ng-container>
+        }
     </ng-template>
 
     <ng-template pTemplate="footer">
